--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -72,7 +72,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -95,7 +95,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -118,7 +118,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -141,7 +141,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
                         
@@ -165,7 +165,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -189,7 +189,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
                         
@@ -214,7 +214,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
