--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -178,7 +178,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
