--- a/project/quantum-computing.html
+++ b/project/quantum-computing.html
@@ -72,7 +72,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -95,7 +95,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -118,7 +118,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -140,7 +140,7 @@
 
                                 </ul>
                                 </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
