--- a/training/document.html
+++ b/training/document.html
@@ -68,7 +68,7 @@
                                 </ul>
                                 </p>
 
-                                <center> <a href="https://github.com/npshub/documentation" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub/documentation" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub/documentation" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
 
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                 </ul>
                                 </p>
 
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://www.teachme.codes/python-docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -113,7 +113,7 @@
                                     <li> Integration of external link, images and other resources with proper citation and image courtesy under the License type of available media</li>
                                 </ul>
                                 </p>
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
@@ -134,7 +134,7 @@
                                         <li class="text-left"> Introduction to MkDocs for notes and document publication at GitHub hosted website</li>
                                     </li>
                                 </p>
-                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                                <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
 
